# nin10kit

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  nin10kit.cbp  readme.odt  setup.sh
cli/: 3ds-exporter.cpp  Makefile  allocator_2d_test.cpp  cmd-line-parser-helper.cpp  cmd-line-parser-helper.hpp  gba-exporter.cpp  lut-exporter.cpp  main.cpp
debian/: changelog  control  copyright  nin10kit.dirs  nin10kit.menu
gui/: Makefile  exporter.cpp  exporter.hpp  imageutil.cpp  imageutil.hpp  nin10kit.cpp  nin10kit.fbp  nin10kit.h  nin10kit.hpp  nin10kitapp.cpp  nin10kitapp.hpp  nin10kitgui.cpp  nin10kitgui.h  nin10kitviewer.cpp  nin10kitviewer.fbp  nin10kitviewer.hpp  nin10kitviewergui.cpp  nin10kitviewergui.h  wxlogger.cpp  wxlogger.hpp
gui/bitmap/: color_chooser_dialog.cpp  color_chooser_dialog.hpp  color_chooser_gui.cpp  color_chooser_gui.fbp  color_chooser_gui.h  color_info_panel.cpp  color_info_panel.hpp  graphics_editor_panel.cpp  graphics_editor_panel.hpp  nin10edit.cpp  nin10edit.fbp  nin10edit.hpp  nin10editapp.cpp  nin10editapp.hpp  nin10editgui.cpp  nin10editgui.fbp  nin10editgui.h  palette_editor_panel.cpp  palette_editor_panel.hpp
gui/shared/: colorutil.cpp  colorutil.hpp  imageutil.cpp  imageutil.hpp  nin10app.cpp  nin10app.hpp
shared/: 3ds-exporter.cpp  Logger.cpp  Logger.hpp  Makefile  Scanner.cpp  Scanner.hpp  alltypes.hpp  cmd-line-parser-helper.cpp  cmd-line-parser-helper.hpp  color-format.hpp  color.cpp  color.hpp  cpercep.cpp  cpercep.hpp  direct-exporter.cpp  dither.cpp  dither.hpp  ds-exporter.cpp  export_params.hpp  exportable.hpp  exportfile.cpp  exportfile.hpp  fileutils.cpp  fileutils.hpp  gba-exporter.cpp  gettimeofday.c  headerfile.cpp  headerfile.hpp  histogram.cpp  histogram.hpp  image.cpp  image.hpp  image16.cpp  image16.hpp  image32.cpp  image32.hpp  image8.cpp  image8.hpp  imagedirect.cpp  imagedirect.hpp  (+30 more)
